# ETF_AI

./: .gitignore  AGENTS.md  ETF_动量轮动_AI_Agent_辅助系统_设计文档_v0.1.md  README.md  example.py  pyproject.toml  requirements.txt
config/: .env.example  agent.yaml  etf_pool.yaml  research.yaml  strategy.yaml
docs/: local-semi-auto-usage.md
scripts/: build_report_portal.py  check_governance_health.py  daily_run.py  etf_ops.py  init_db.py  publish_governance_decision.py  rollback_governance_decision.py  run_backtest.py  run_end_to_end_workflow.py  run_governance_cycle.py  run_governance_review.py  run_research.py  run_research_governance_pipeline.py  run_workflow_automation.py  summarize_research_reports.py
src/: governance_pipeline.py  main.py  report_portal.py  research_candidate_config.py  research_pipeline.py  research_summary.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_agents.py  test_candidate_risk_adjusted_momentum.py  test_candidate_trend_momentum.py  test_database_isolation.py  test_end_to_end_workflow_runner.py  test_end_to_end_workflow_runner_cli_smoke.py  test_etf_ops_cli.py  test_etf_ops_legacy_compat.py  test_etf_ops_status.py  test_execution.py  test_execution_simulator.py  test_governance_automation.py  test_governance_evaluator.py  test_governance_health.py  test_governance_models.py  test_governance_regime_gate.py  test_governance_repository.py  test_governance_runtime.py  test_pipeline_e2e.py  test_rebalance_policy.py  test_regime_analysis.py  test_regime_classifier.py  test_regressions.py  test_report_portal.py  test_research_pipeline.py  (+10 more)
(+83 files in other folders)
